# cellbet

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  drizzle.config.ts  package.json  pnpm-lock.yaml
backend/drizzle/: 0000_init.sql  0001_crash_tables.sql  0002_drop_auto_cashout.sql  0004_remarkable_union_jack.sql  0006_drop_crash_wallet_trigger.sql  (+5 more)
contract/: Cargo.toml  README.md  package.json
contract/contracts/crash-commit-reveal/: Cargo.toml  Makefile
contract/contracts/crash-commit-reveal/src/: main.rs
contract/contracts/crash-round/: Cargo.toml  Makefile
contract/contracts/crash-round-anchor/: Cargo.toml  Makefile
contract/contracts/crash-round-anchor/src/: main.rs
contract/contracts/crash-round/src/: main.rs
contract/contracts/crash-seed-commit-sha256/: Cargo.toml  Makefile
contract/contracts/crash-seed-commit-sha256/src/: main.rs
contract/contracts/crash-settlement-split/: Cargo.toml  Makefile
contract/contracts/crash-settlement-split/src/: main.rs
contract/contracts/game-session-lock/: Cargo.toml  Makefile
contract/contracts/game-session-lock/src/: main.rs
contract/deploy-testnet/: deployment.toml  info.json
contract/deploy-testnet/crash-round/: deployment.toml
contract/deploy-testnet/game-session-lock/: deployment.toml  info.json
contract/deploy-testnet/migrations/: 2026-04-07-234625.json
contract/tests/: Cargo.toml
contract/tests/src/: tests.rs
docs/: PHASE_0_CRASH_SPEC.md  crash-internal-balance-plan.md
frontend/: .env.example  next.config.ts  package.json
(+71 files in other folders)
