[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "tests",
]

# Standalone no_std crates built via contracts/*/Makefile (riscv64imac).
exclude = ["contracts/crash-commit-reveal", "contracts/crash-seed-commit-sha256"]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
