[package]
name = "game-session-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-hash = { version = "1.1", default-features = false, features = ["ckb-contract"] }
ckb-std = "1.1"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
